[project]
name = "token-env"
version = "0.2.3"
description = "Gymnasium grid environment with random tokens"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.20",
    "pettingzoo>=1.25.0",
    "supersuit>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
